fix(server): 将 xmon.me 添加到 CORS 允许域名列表